Updated Guest footer white space issue for landscape view

--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -285,8 +285,10 @@
 //     }
 // }
 @media only screen and (max-height: 336px) and (orientation: landscape){
-    .guest-main-content {
-        height: calc(100vh - 2%) !important;
+    @-moz-document url-prefix()   { 
+        .guest-main-content {
+            height: calc(100vh - 2%) !important;
+        }
     }
 }
 @media only screen and (device-height : 375px) and (device-width : 812px)  {
